--- a/empdashboard.html
+++ b/empdashboard.html
@@ -16,6 +16,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;400&display=swap" rel="stylesheet">
+
+        <link href="calendar.js" rel="text/js">
 <!--<link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet">
  -->
 
@@ -61,6 +63,49 @@
 		<div class="starter-template text-center py-5 px-3">
 		  <h1 class="text-uppercase">Employee Dashboard</h1>
 		</div>
+
+
+<!MAIN FOCUS DASHBOARD-->
+
+<div class="container">
+<div class="row">
+
+      <div class="col-sm">
+                    <div class="card" style="">
+
+              <div class="card-body shadow">
+                <h2 class="card-title">To Do:</h2>
+                <h3 class="text-danger">Prioreties:</h3>
+                <h3 class="text-warning">General:</h3>
+                <h3 class="text-info">Not Urgent:</h3>
+              </div>
+            </div>
+         </div>
+
+    </div>
+
+
+
+
+        </div>
+
+<div class="container">
+<div class="row">
+
+      <div class="col-sm">
+                    <div class="card" style="">
+
+              <div class="card-body shadow">
+                <h2 class="card-title">Service Requests</h2>
+
+              </div>
+            </div>
+         </div>
+
+    </div>
+
+<!--Secondary Focus Dashboard-->
+
 <div class="container">
     <div class="row">
         <div class="col-sm">
@@ -134,46 +179,6 @@
 
     </div>
 </div>
-
-
-<div class="container">
-<div class="row">
-
-      <div class="col-sm">
-                    <div class="card" style="">
-
-              <div class="card-body shadow">
-                <h2 class="card-title">To Do:</h2>
-                <h3 class="text-danger">Prioreties:</h3>
-                <h3 class="text-warning">General:</h3>
-                <h3 class="text-info">Not Urgent:</h3>
-              </div>
-            </div>
-         </div>
-
-    </div>
-
-
-
-
-        </div>
-
-<div class="container">
-<div class="row">
-
-      <div class="col-sm">
-                    <div class="card" style="">
-
-              <div class="card-body shadow">
-                <h2 class="card-title">Service Requests</h2>
-
-              </div>
-            </div>
-         </div>
-
-    </div>
-
-
 
 
         </div>
