--- a/empdashboard.html
+++ b/empdashboard.html
@@ -96,7 +96,30 @@
                     <div class="card" style="">
 
               <div class="card-body shadow">
-                <h2 class="card-title">Service Requests</h2>
+                <h2 class="card-title">Active Services</h2>
+    <h3> Customer 1</h3>
+<div class="progress space">
+  <div class="progress-bar-lg" role="progressbar" style="width:15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
+  <div class="progress-bar bg-success" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+  <div class="progress-bar bg-info" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
+
+
+<h3> Customer 2</h3>
+<div class="progress space">
+
+  <div class="progress-bar" role="progressbar" style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
+  <div class="progress-bar bg-success" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+  <div class="progress-bar bg-info" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
+
+      <h3> Customer 3</h3>
+<div class="progress space">
+  <div class="progress-bar" role="progressbar" style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
+  <div class="progress-bar bg-success" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+  <div class="progress-bar bg-info" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
+
 
               </div>
             </div>
@@ -113,20 +136,14 @@
 
               <div class="card-body shadow">
                 <h1 class="card-title ">Customers</h1>
-                <a href="#" class="btn btn-success btn-center">Go to customers</a>
+                <a href="#" class="btn btn-success btn-center"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle text-white" viewBox="0 0 16 16">
+  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+  <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+</svg> Go to customers</a>
               </div>
             </div>
          </div>
 
-           <div class="col-sm">
-                    <div class="card" style="">
-
-              <div class="card-body shadow">
-                <h1 class="card-title">Inventory</h1>
-                <a href="#" class="btn btn-success">Go to inventory</a>
-              </div>
-            </div>
-         </div>
 
            <div class="col-sm">
                     <div class="card" style="">
@@ -134,7 +151,10 @@
               <div class="card-body shadow">
                 <h1 class="card-title"> Service Tickets</h1>
 
-                <a href="#" class="btn btn-success">Write a service request</a>
+                <a href="#" class="btn btn-success"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle text-white" viewBox="0 0 16 16">
+  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+  <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+</svg> Write a service request</a>
               </div>
             </div>
          </div>
@@ -150,18 +170,10 @@
               <div class="card-body shadow">
                 <h1 class="card-title">Calendar</h1>
 
-                <a href="#" class="btn btn-success">View Calendar</a>
-              </div>
-            </div>
-         </div>
-
-           <div class="col-sm">
-                    <div class="card" style="">
-
-              <div class="card-body shadow">
-                <h1 class="card-title">Vehicles</h1>
-
-                <a href="#" class="btn btn-success">View Trucks</a>
+                <a href="#" class="btn btn-success"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle text-white" viewBox="0 0 16 16">
+  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+  <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+</svg> View Calendar</a>
               </div>
             </div>
          </div>
@@ -172,7 +184,11 @@
               <div class="card-body shadow">
                 <h1 class="card-title">Settings</h1>
 
-                <a href="#" class="btn btn-success">Adjust Settings</a>
+              <a href="#" class="btn btn-success ">  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle text-white" viewBox="0 0 16 16">
+  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+  <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+</svg> Adjust Settings</a>
+
               </div>
             </div>
          </div>
