--- a/emp.tickets.html
+++ b/emp.tickets.html
@@ -60,8 +60,6 @@
 
 
 
-
-
 		<div class="starter-template  py-5 px-3">
 		  <h1>Service Ticket</h1>
 		<form class="container form col-xs-4">
@@ -69,7 +67,7 @@
     <div class="col-md-12">
   <div class="form-group md-form mb-0">
     <label for="exampleInputEmail1">First Name</label>
-    <input type="email" class="form-control shadow-sm imput-small" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Service needs here">
+    <input type="email" class="form-control shadow-sm imput-small" id="inputFirst Name" aria-describedby="emailHelp" placeholder="Customer First Name">
       </div>
 
   </div>
@@ -78,7 +76,7 @@
     <div class="col-md-12">
   <div class="form-group mb-0">
     <label for="exampleInputPassword1">Last Name</label>
-    <input type="password" class="form-control shadow-sm" id="exampleInputPassword1" placeholder="Password">
+    <input type="text" class="form-control shadow-sm"  placeholder="Customer Last Name">
   </div>
 
         </div>
@@ -87,7 +85,7 @@
     <div class="col-md-12">
   <div class="form-group md-form mb-0">
     <label for="exampleInputEmail1">Address</label>
-    <input type="email" class="form-control shadow-sm imput-small" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+    <input type="email" class="form-control shadow-sm imput-small" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Customer Address">
       </div>
 
   </div>
