--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</head>
 
 	<body class="body">
-        <nav class="navbar navbar-expand-lg bg-white fixed-top shadow-sm" id="mainNav">
+        <nav class="nav navbar navbar-expand-lg bg-white fixed-top shadow-sm" id="mainNav">
               <div class="container">
           <a class="navbar-brand js-scroll-trigger" href="empdashboard.html"><img src="images/header-logo.png"></a>
             </div>
