--- a/empdashboard.html
+++ b/empdashboard.html
@@ -38,14 +38,20 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger green" href="emp.tickets.html">Service Tickets</a>
+              <a class="nav-link js-scroll-trigger green" href="emp.tickets.html">Initial Contact </a>
             </li>
               <li class="nav-item">
               <a class="nav-link js-scroll-trigger green" href="emp.calendar.html">Calendar</a>
             </li>
+                 <li class="nav-item">
+              <a class="nav-link js-scroll-trigger green" href="emp.customers.html">Manage Employees</a>
+            </li>
+
               <li class="nav-item">
               <a class="nav-link js-scroll-trigger green" href="emp.settings.html">Settings</a>
             </li>
+
+
           </ul>
         </div>
       </div>
@@ -141,12 +147,12 @@
                     <div class="card" style="">
 
               <div class="card-body shadow">
-                <h1 class="card-title"> Service Tickets</h1>
+                <h1 class="card-title"> Customer Contacts</h1>
 
                 <a href="#" class="btn btn-custom text-white"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle text-white" viewBox="0 0 16 16">
             <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
             <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-                        </svg> Write a Service Ticket</a>
+                        </svg> View Customer Information</a>
               </div>
             </div>
          </div>
@@ -154,44 +160,7 @@
     </div>
 </div>
 
-        <div class="container">
-    <div class="row">
-        <div class="col">
-                    <div class="card" style="">
 
-              <div class="card-body shadow">
-                <h1 class="card-title">Calendar</h1>
-
-                <a href="#" class="btn btn-custom text-white"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle text-white" viewBox="0 0 16 16">
-  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-  <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-</svg> View Calendar</a>
-
-
-
-
-
-              </div>
-            </div>
-         </div>
-
-           <div class="col-sm">
-                    <div class="card" style="">
-
-              <div class="card-body shadow">
-                <h1 class="card-title">Settings</h1>
-
-              <a href="#" class="btn btn-custom text-white ">  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle text-white" viewBox="0 0 16 16">
-  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-  <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-</svg> Adjust Settings</a>
-
-              </div>
-            </div>
-         </div>
-
-    </div>
-</div>
 
 
         </div>
