cant get these damn colors to work

--- a/empdashboard.html
+++ b/empdashboard.html
@@ -168,8 +168,8 @@
 
 <div class="container">
   <header>
-    <h1 class="display-4 mb text-center">November 2017</h1>
-    <div class="row d-none d-sm-flex p-1 bg-dark text-white">
+    <h1 class="display-4 mb text-center text-uppercase ">March 2021</h1>
+    <div class="row d-none d-sm-flex p-1 row-custom calcustom darkgreen">
       <h5 class="col-sm p-1 text-center">Sunday</h5>
       <h5 class="col-sm p-1 text-center">Monday</h5>
       <h5 class="col-sm p-1 text-center">Tuesday</h5>
