Dont know why things aren't saving.. lets try this again

--- a/emp.tickets.html
+++ b/emp.tickets.html
@@ -66,8 +66,8 @@
 <div class="container row">
     <div class="col-md-12">
   <div class="form-group md-form mb-0">
-    <label for="exampleInputEmail1">First Name</label>
-    <input type="email" class="form-control shadow-sm imput-small" id="inputFirst Name" aria-describedby="emailHelp" placeholder="Customer First Name">
+    <label >First Name</label>
+    <input type="text" class="form-control shadow-sm imput-small" id="inputFirst Name" aria-describedby="text" placeholder="Customer First Name">
       </div>
 
   </div>
@@ -75,7 +75,7 @@
     <div class="container row">
     <div class="col-md-12">
   <div class="form-group mb-0">
-    <label for="exampleInputPassword1">Last Name</label>
+    <label >Last Name</label>
     <input type="text" class="form-control shadow-sm"  placeholder="Customer Last Name">
   </div>
 
@@ -84,8 +84,8 @@
 <div class="container row">
     <div class="col-md-12">
   <div class="form-group md-form mb-0">
-    <label for="exampleInputEmail1">Address</label>
-    <input type="email" class="form-control shadow-sm imput-small" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Customer Address">
+    <label>Address</label>
+    <input type="address" class="form-control shadow-sm imput-small" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Customer Address">
       </div>
 
   </div>
@@ -93,8 +93,8 @@
     <div class="container row">
     <div class="col-md-12">
   <div class="form-group mb-0">
-    <label for="exampleInputPassword1">City</label>
-    <input type="password" class="form-control shadow-sm" id="exampleInputPassword1" placeholder="Password">
+    <label >City</label>
+    <input type="text" class="form-control shadow-sm" id="exampleInputPassword1" placeholder="Input Customer City">
   </div>
 
         </div>
@@ -102,8 +102,8 @@
 <div class="container row">
     <div class="col-md-12">
   <div class="form-group mb-0">
-    <label for="exampleInputPassword1">State</label>
-    <input type="password" class="form-control shadow-sm" id="exampleInputPassword1" placeholder="Password">
+    <label>State</label>
+    <input type="text" class="form-control shadow-sm" id="exampleInputPassword1" placeholder="Input Customer State">
   </div>
 
         </div>
@@ -111,8 +111,8 @@
             <div class="container row">
     <div class="col-md-12">
   <div class="form-group mb-0">
-    <label for="exampleInputPassword1">Zip Code</label>
-    <input type="password" class="form-control shadow-sm" id="exampleInputPassword1" placeholder="Password">
+    <label>Zip Code</label>
+    <input type="text" class="form-control shadow-sm" id="exampleInputPassword1" placeholder="Input Customer Zip Code">
   </div>
 
         </div>
@@ -120,18 +120,27 @@
 
 <div class="container row">
     <div class="col-md-12">
-  <div class="form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Auction</label>
+ <div class="row justify-content-center"  style="text-align: center; ">
+            <div class="col-sm">
+                <a href="#" class="btn btn-custom text-white"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle text-white" viewBox="0 0 16 16">
+                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                        </svg> Auction</a>
+                <a href="#" class="btn btn-custom text-white "> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle text-white" viewBox="0 0 16 16">
+                            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                            <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+</svg>Move</a>
+              </div>
+
+
+
+
+          </div>
   </div>
-        <div class="form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Move</label>
-  </div>
-  <button type="submit" class="btn btn-primary btn-success shadow-sm"><a href="empdashboard.html" class="text-white">Login</a></button>
+  <button type="submit" class="btn btn-primary btn-success shadow-sm btn-sm" style="text-align: center; " ><a href="empdashboard.html" class="text-white"> Submit Form</a></button>
     </div>
 
-    </div>
+
 
 </form>
 		</div>
