--- a/empdashboard.html
+++ b/empdashboard.html
@@ -23,7 +23,7 @@
 	</head>
 
 	<body>
-          <nav class="navbar navbar-expand-lg fixed-top shadow-sm navcolor navbar-custom" id="mainNav">
+          <nav class="navbar navbar-expand-lg fixed-top shadow-sm navcolor navbar-custom" id="mainNav" >
       <div class="container">
 
         <a class="navbar-brand js-scroll-trigger" href="empdashboard.html"><img src="images/header-logo.png"></a>
@@ -50,7 +50,6 @@
               <li class="nav-item">
               <a class="nav-link js-scroll-trigger green" href="emp.settings.html">Settings</a>
             </li>
-
 
           </ul>
         </div>
@@ -125,14 +124,14 @@
               <div class="card-body shadow">
                 <h1 class="card-title ">Initial contact</h1>
         <div class="row">
-            <div class="col-sm">
+            <div class="col-sm" style="text-align: center;" >
                 <a href="#" class="btn btn-custom text-white"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle text-white" viewBox="0 0 16 16">
                         <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
                         <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
                         </svg> New Customer</a>
               </div>
                <div class="col-sm">
-                    <a href="#" class="btn btn-custom text-white"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle text-white" viewBox="0 0 16 16">
+                    <a href="#" class="btn btn-custom text-white" > <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle text-white" viewBox="0 0 16 16">
                             <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
                             <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
 </svg> Existing Customer</a>
@@ -146,10 +145,10 @@
            <div class="col-sm">
                     <div class="card" style="">
 
-              <div class="card-body shadow">
+              <div class="card-body shadow" style="text-align: center;">
                 <h1 class="card-title"> Customer Contacts</h1>
 
-                <a href="#" class="btn btn-custom text-white"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle text-white" viewBox="0 0 16 16">
+                <a href="#" class="btn btn-custom text-white" ><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle text-white" viewBox="0 0 16 16">
             <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
             <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
                         </svg> View Customer Information</a>
@@ -168,7 +167,7 @@
 
 <div class="container">
   <header>
-    <h1 class="display-4 mb text-center text-uppercase ">March 2021</h1>
+    <h1 class=" mb text-center text-uppercase font-weight-bold">March 2021</h1>
     <div class="row d-none d-sm-flex p-1 row-custom calcustom darkgreen">
       <h5 class="col-sm p-1 text-center">Sunday</h5>
       <h5 class="col-sm p-1 text-center">Monday</h5>
