code on employee dashboard has been rearranged

--- a/empdashboard.html
+++ b/empdashboard.html
@@ -17,14 +17,13 @@
             <link rel="preconnect" href="https://fonts.gstatic.com">
             <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;400&display=swap" rel="stylesheet">
 
-<!--<link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet">
- -->
 
-	</head>
 
-	<body>
-          <nav class="navbar navbar-expand-lg fixed-top shadow-sm navcolor navbar-custom" id="mainNav" >
-      <div class="container">
+    </head>
+
+<body>
+     <nav class="navbar navbar-expand-lg fixed-top shadow-sm navcolor navbar-custom" id="mainNav" >
+            <div class="container">
 
         <a class="navbar-brand js-scroll-trigger" href="empdashboard.html"><img src="images/header-logo.png"></a>
 
@@ -33,126 +32,109 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto text-success">
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger green" href="emp.customers.html" >Customer Contacts</a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger green" href="emp.tickets.html">Initial Contact </a>
-            </li>
-              <li class="nav-item">
-              <a class="nav-link js-scroll-trigger green" href="emp.calendar.html">Calendar</a>
-            </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger green" href="emp.customers.html" >Customer Contacts</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger green" href="initialcontact.html">Initial Contact </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger green" href="emp.calendar.html">Calendar</a>
+                </li>
                  <li class="nav-item">
-              <a class="nav-link js-scroll-trigger green" href="emp.customers.html">Manage Employees</a>
-            </li>
-
-              <li class="nav-item">
-              <a class="nav-link js-scroll-trigger green" href="emp.settings.html">Settings</a>
-            </li>
-
-          </ul>
+                    <a class="nav-link js-scroll-trigger green" href="emp.customers.html">Manage Employees</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger green" href="emp.settings.html">Settings</a>
+                </li>
+            </ul>
         </div>
       </div>
     </nav>
 
 
 	<!-- INSERT HTML PAGE CONTENT HERE -->
-	<main class="container">
+    <main class="container">
 
 		<div class="starter-template text-center py-5 px-3">
 		  <h1 class="text-uppercase">Employee Dashboard</h1>
 		</div>
 
 
-<!MAIN FOCUS DASHBOARD-->
+<!--MAIN FOCUS DASHBOARD-->
 
-<div class="container">
-<div class="row">
+    <div class="container">
+        <div class="row">
 
-      <div class="col-sm">
-                    <div class="card" style="">
-
-              <div class="card-body shadow">
-                <h2 class="card-title">To Do:</h2>
-                <h3 class="text-danger">Prioreties:</h3>
-                <h3 class="text-warning">General:</h3>
-                <h3 class="text-info">Not Urgent:</h3>
-              </div>
-            </div>
-         </div>
-
-    </div>
-
-
-
+          <div class="col-sm">
+                <div class="card" >
+                    <div class="card-body shadow">
+                        <h2 class="card-title">To Do:</h2>
+                        <h3 class="text-danger">Prioreties:</h3>
+                        <h3 class="text-warning">General:</h3>
+                        <h3 class="text-info">Not Urgent:</h3>
+                    </div>
+                </div>
+             </div>
 
         </div>
-
-<div class="container">
-<div class="row">
-
-      <div class="col-sm">
-                    <div class="card" style="">
-
-              <div class="card-body shadow">
-                <h2 class="card-title">Active Tickets</h2>
-    <h3> Customer 1</h3>
-<div class="progress space shadow">
-
-  <div class="progress-bar bg-danger" role="progressbar" style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100">Benchmark 1</div>
-  <div class="progress-bar bg-warning" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">Benchmark 2</div>
-  <div class="progress-bar bg-success" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"> Benchmark 3</div>
-    <div class="progress-bar " role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"> Benchmark 4</div>
-    <div class="progress-bar bg-info" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"> Benchmark 5!</div>
-</div>
-
-<p>Keeping this here so we have the format for later</p>
-              </div>
-            </div>
-         </div>
-
     </div>
+
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <div class="card" style="">
+                    <div class="card-body shadow">
+                        <h2 class="card-title">Active Tickets</h2>
+                        <h3> Customer 1</h3>
+                        <div class="progress space shadow">
+                          <div class="progress-bar bg-danger" role="progressbar" style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100">Benchmark 1</div>
+                          <div class="progress-bar bg-warning" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">Benchmark 2</div>
+                          <div class="progress-bar bg-success" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"> Benchmark 3</div>
+                            <div class="progress-bar " role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"> Benchmark 4</div>
+                            <div class="progress-bar bg-info" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"> Benchmark 5!</div>
+                        </div>
+                        <p>Keeping this here so we have the format for later</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 <!--Secondary Focus Dashboard-->
 
 <div class="container">
     <div class="row">
         <div class="col-sm">
-                    <div class="card" style="">
-
-              <div class="card-body shadow">
-                <h1 class="card-title ">Initial contact</h1>
-        <div class="row">
-            <div class="col-sm" style="text-align: center;" >
-                <a href="#" class="btn btn-custom text-white"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle text-white" viewBox="0 0 16 16">
+            <div class="card" style="">
+                <div class="card-body shadow">
+                    <h1 class="card-title ">Initial contact</h1>
+                <div class="row">
+                    <div class="col-sm" style="text-align: center;" >
+                        <a href="#" class="btn btn-custom text-white"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle text-white" viewBox="0 0 16 16">
                         <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
                         <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
                         </svg> New Customer</a>
-              </div>
-               <div class="col-sm">
-                    <a href="#" class="btn btn-custom text-white" > <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle text-white" viewBox="0 0 16 16">
-                            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                            <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-</svg> Existing Customer</a>
+                    </div>
+                    <div class="col-sm">
+                        <a href="#" class="btn btn-custom text-white" > <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle text-white" viewBox="0 0 16 16">
+                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/></svg> Existing Customer</a>
+                    </div>
                 </div>
-          </div>
               </div>
             </div>
-         </div>
+        </div>
 
+        <div class="col-sm">
+            <div class="card" style="">
+                <div class="card-body shadow" style="text-align: center;">
+                    <h1 class="card-title"> Customer Contacts</h1>
 
-           <div class="col-sm">
-                    <div class="card" style="">
-
-              <div class="card-body shadow" style="text-align: center;">
-                <h1 class="card-title"> Customer Contacts</h1>
-
-                <a href="#" class="btn btn-custom text-white" ><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle text-white" viewBox="0 0 16 16">
-            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-            <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-                        </svg> View Customer Information</a>
-              </div>
+                        <a href="#" class="btn btn-custom text-white" ><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle text-white" viewBox="0 0 16 16">
+                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/></svg> View Customer Information</a>
+                </div>
             </div>
          </div>
 
@@ -168,15 +150,15 @@
 <div class="container">
   <header>
     <h1 class=" mb text-center text-uppercase font-weight-bold">March 2021</h1>
-    <div class="row d-none d-sm-flex p-1 row-custom calcustom darkgreen">
-      <h5 class="col-sm p-1 text-center">Sunday</h5>
-      <h5 class="col-sm p-1 text-center">Monday</h5>
-      <h5 class="col-sm p-1 text-center">Tuesday</h5>
-      <h5 class="col-sm p-1 text-center">Wednesday</h5>
-      <h5 class="col-sm p-1 text-center">Thursday</h5>
-      <h5 class="col-sm p-1 text-center">Friday</h5>
-      <h5 class="col-sm p-1 text-center">Saturday</h5>
-    </div>
+        <div class="row d-none d-sm-flex p-1 row-custom calcustom darkgreen">
+          <h5 class="col-sm p-1 text-center">Sunday</h5>
+          <h5 class="col-sm p-1 text-center">Monday</h5>
+          <h5 class="col-sm p-1 text-center">Tuesday</h5>
+          <h5 class="col-sm p-1 text-center">Wednesday</h5>
+          <h5 class="col-sm p-1 text-center">Thursday</h5>
+          <h5 class="col-sm p-1 text-center">Friday</h5>
+          <h5 class="col-sm p-1 text-center">Saturday</h5>
+        </div>
   </header>
   <div class="row border border-right-0 border-bottom-0">
     <div class="day col-sm p-2 border border-left-0 border-top-0 text-truncate d-none d-sm-inline-block bg-light text-muted">
