--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</head>
 
 	<body class="body">
-        <nav class="nav navbar navbar-expand-lg bg-white fixed-top shadow-sm" id="mainNav">
+        <nav class="nav navbar navbar-expand-lg navbar-custom fixed-top shadow-sm" id="mainNav">
               <div class="container">
           <a class="navbar-brand js-scroll-trigger" href="empdashboard.html"><img src="images/header-logo.png"></a>
             </div>
@@ -39,7 +39,7 @@
 
 <form class="container form col-xs-4">
 
-  <!--Check boxes section-->
+  <!--Check boxes section
     <div class="row container">
     <div class="col-sm">
       <div class="form-check">
@@ -54,7 +54,18 @@
   </div>
     </div>
     </div>
+-->
+<div class="container" style="text-align: center;">
+<div class="btn-group btn-group-toggle  btn-custom" data-toggle="buttons">
+  <label class="btn btn-secondary active">
+    <input type="radio" name="options" id="option1" autocomplete="off" checked> Customer
+  </label>
+  <label class="btn btn-secondary">
+    <input type="radio" name="options" id="option2" autocomplete="off"> Employee
+  </label>
 
+</div>
+</div>
 
 <div class="container row">
     <div class="col-md-12">
