--- a/emp.tickets.html
+++ b/emp.tickets.html
@@ -26,7 +26,7 @@
 
 
 
-            <nav class="navbar navbar-expand-lg bg-white fixed-top" id="mainNav">
+            <nav class="navbar navbar-expand-lg navbar-custom fixed-top" id="mainNav">
       <div class="container">
 
         <a class="navbar-brand js-scroll-trigger" href="empdashboard.html"><img src="images/header-logo.png"></a>
