--- a/customercontacts.html
+++ b/customercontacts.html
@@ -17,7 +17,35 @@
 	</head>
 
 	<body class="body">
+ <nav class="navbar navbar-expand-lg fixed-top shadow-sm navcolor navbar-custom" id="mainNav" >
+            <div class="container">
 
+        <a class="navbar-brand js-scroll-trigger" href="empdashboard.html"><img src="images/header-logo.png"></a>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto text-success">
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger green" href="customercontacts.html" >Customer Contacts</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger green" href="initialcontact.html">Initial Contact </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger green" href="employeecalendar.html">Calendar</a>
+                </li>
+                 <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger green" href="">Manage Employees</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger green" href="">Settings</a>
+                </li>
+            </ul>
+        </div>
+      </div>
+    </nav>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
