--- a/empdashboard.html
+++ b/empdashboard.html
@@ -511,7 +511,7 @@
 	  </main>
 
 
-<footer class="fixed-bottom"> <p>This site was created for the use of Green Valley Auctions Members and James Madison University COB and SMAD students and professors only.</p> </footer>
+<footer class="fixed-bottom container"> <p>This site was created for the use of Green Valley Auctions Members and James Madison University COB and SMAD students and professors only.</p> </footer>
 
         <!-- /.container -->
 
