--- a/initialcontact.html
+++ b/initialcontact.html
@@ -152,7 +152,7 @@
 </form>
 
 	  </main><!-- /.container -->
-<footer class="fixed-bottom container"> <p>This site was created for the use of Green Valley Auctions Members and James Madison University COB and SMAD students and professors only.</p> </footer>
+<footer class="sticky-bottom container"> <p>This site was created for the use of Green Valley Auctions Members and James Madison University COB and SMAD students and professors only.</p> </footer>
 		<!-- Bootstrap js - do not delete! -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 		<!-- end of do not delete -->
