--- a/employeecalendar.html
+++ b/employeecalendar.html
@@ -33,7 +33,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto text-success">
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger green" href="emp.customers.html" >Customer Contacts</a>
+                    <a class="nav-link js-scroll-trigger green" href="customercontacts.html" >Customer Contacts</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger green" href="initialcontact.html">Initial Contact </a>
